# dispatch-merge

./: .gitignore  DiffAndMerge.hs  DiffParser.hs  Git.hs  Main.hs  Makefile  Prompt.hs  Readme.md  ResolveDeleted.hs  ResolveModified.hs  Util.hs  dispatch-merge.cabal  stack.yaml  test.txt
src/: DiffParser.hs  Diffs.hs  Git.hs  Main.hs  Prompt.hs  ResolveModified.hs  Util.hs
test/: new.txt  old.txt  test.txt
tests/: test-diff3.txt  test.txt
