name:                dispatch-merge
version:             1.2.0.0
synopsis:            Command-line tool for resolving merge conflicts.
description:         Please see README.md
homepage:            https://bitbucket.org/rdnetto/dispatch-merge
license:             Apache
license-file:        LICENSE
author:              Renee D'Netto
maintainer:          rdnetto@atlassian.com
copyright:           Atlassian 2016
category:            Git
build-type:          Simple
cabal-version:       >=1.10

executable dispatch-merge
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       DiffParser
                     , Diffs
                     , Git
                     , Prompt
                     , ResolveDeleted
                     , ResolveModified
                     , Util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , ansi-terminal
                     , filepath
                     , monad-loops
                     , patience
                     , process
                     , safe
                     , split
                     , temporary
                     , terminal-size
  default-language:    Haskell2010
  default-extensions:  TupleSections

source-repository head
  type:     git
  location: https://rdnetto@bitbucket.org/rdnetto/dispatch-merge.git
